<resources>
    <string name="app_name">Travlendar Login Register</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_registered">No account yet? Create one</string>
    <string name="text_already_registered">Already registered? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_title">Travlendar</string>
    <string name="accounts_registered">Registered Accounts</string>
    <string name="title_activity_calendar">Calendar Activity</string>

    <string name="action_settings">Settings</string>
    <string name="switch_title">Settings Option</string>
    <string name="switch_summary">Turn this option on or off</string>
    <string name="list_pref_font_color">Font Color</string>
    <string name="list_pref_font_size">Font Size</string>
    <string name="list_pref_mode_of_trans">Preferred Mode of Transportation</string>

    <!-- Calendar -->
    <string name="current_date">February, 2019</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
