<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CalendarActivity"
    tools:showIn="@layout/activity_calendar">

    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_custom_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="29dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/previous_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/left_arrow" />

            <TextView
                android:id="@+id/display_current_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/current_date"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/next_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                android:src="@drawable/right_arrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="@color/colorCalWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@color/colorCalWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="@color/colorCalWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed"
                android:textColor="@color/colorCalWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thu"
                android:textColor="@color/colorCalWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textColor="@color/colorCalWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="@color/colorCalWhite"
                android:textStyle="bold" />
        </LinearLayout>

        <GridView
            android:id="@+id/calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>